[package]
name = "mojika"
version = "0.1.0"
authors = ["kame_local <Kamekamekame7@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.23"
rusttype = "0.9.2"
imageproc = "0.22.0"
image = "0.23.14"